--- a/src/styles/projectBox.css
+++ b/src/styles/projectBox.css
@@ -25,3 +25,11 @@
 .titleColor{
   color: white !important;
 }
+.navigate-arrow {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: white; 
+  font-size: 20px; 
+
+}
