--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -25,6 +25,40 @@
   color: white;
 }
 
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); 
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: #000000; 
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center; 
+  color: #000000;
+}
+
+.close {
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal-profile-pic-small {
+  max-width: 30%; 
+  max-height: 300px; 
+  border-radius: 50%; 
+  margin-bottom: 20px; 
+}
 
 
 
